// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating a talent 1`] = `
<React.Fragment>
  <Image
    entityType="talent"
    showCarousel={false}
  />
  <EntityHeading>
    New Talent
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <Connect(ReduxForm)
      initialValues={
        Object {
          "id": 1,
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when editing a talent 1`] = `
<React.Fragment>
  <Image
    entityType="talent"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    First Last
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <Connect(ReduxForm)
      initialValues={
        Object {
          "id": 1,
        }
      }
      isEdit={true}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;
